<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".activity.LoginActivity">


    <ImageView
        android:id="@+id/loginImageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="170dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/ic_food_delivery" />

    <TextView
        android:id="@+id/appTitleTxtView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginImageView"
        android:layout_centerInParent="true"
        android:fontFamily="@font/lemon_reg"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="18sp" />


    <EditText
        android:id="@+id/mobileLoginET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/appTitleTxtView"
        android:layout_margin="10dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/lemon_reg"
        android:hint="@string/enter_your_mobile_no_10_digits"
        android:inputType="number"
        android:maxLength="10"
        android:padding="12dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/passwordLoginET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/mobileLoginET"
        android:layout_margin="10dp"
        android:fontFamily="@font/lemon_reg"
        android:hint="@string/password"
        android:inputType="numberPassword"
        android:maxLength="6"
        android:padding="12dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="14sp" />

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordLoginET"
        android:layout_margin="10dp"
        android:background="@color/white"
        android:fontFamily="@font/lemon_reg"
        android:padding="12dp"
        android:text="@string/login" />

    <TextView
        android:id="@+id/forgetPassTxtView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginBtn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/lemon_reg"
        android:text="@string/forget_password"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/signUpTxtView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/lemon_reg"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="normal" />


</RelativeLayout>