<?xml version="1.0" encoding="utf-8"?>
<RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/groupradio"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:layout_marginTop="40dp"
    android:background="@color/black">

    <RadioButton
        android:id="@+id/radio_low_to_high"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/lemon_reg"
        android:padding="4dp"
        android:text="@string/cost_low_to_high"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <RadioButton
        android:id="@+id/radio_high_to_low"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/lemon_reg"
        android:padding="4dp"
        android:text="@string/cost_high_to_low"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <RadioButton
        android:id="@+id/radio_rating"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/lemon_reg"
        android:padding="4dp"
        android:text="@string/rating"
        android:textColor="@color/white"
        android:textSize="16sp" />

</RadioGroup>