<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".activity.ForgetPasswordActivity">

    <ImageView
        android:id="@+id/ForgetPassImageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="170dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/ic_food_delivery" />

    <TextView
        android:id="@+id/txtInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ForgetPassImageView"
        android:layout_centerInParent="true"
        android:layout_marginBottom="30dp"
        android:fontFamily="@font/lemon_reg"
        android:gravity="center"
        android:text="@string/enter_your_registered_mobile_number_and_email_below"
        android:textColor="@color/white"
        android:textSize="12sp" />


    <EditText
        android:id="@+id/mobileForgetET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtInfo"
        android:layout_margin="10dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/lemon_reg"
        android:hint="@string/enter_your_mobile_no_10_digits"
        android:inputType="number"
        android:maxLength="10"
        android:padding="12dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/emailForgetET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/mobileForgetET"
        android:layout_margin="10dp"
        android:fontFamily="@font/lemon_reg"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="14sp" />

    <Button
        android:id="@+id/nextBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/emailForgetET"
        android:layout_margin="15dp"
        android:background="@color/white"
        android:fontFamily="@font/lemon_reg"
        android:padding="10dp"
        android:text="Next" />


</RelativeLayout>