<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="110dp"
    android:layout_margin="6dp"
    android:outlineAmbientShadowColor="@color/white"
    android:outlineProvider="background"
    android:outlineSpotShadowColor="@color/white"
    app:cardBackgroundColor="@color/black"
    app:cardCornerRadius="10dp"
    app:cardElevation="4dp"
    app:cardMaxElevation="4dp">

    <RelativeLayout
        android:id="@+id/rlContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp">

        <ImageView
            android:id="@+id/foodImageView"
            android:layout_width="95dp"
            android:layout_height="95dp"
            android:contentDescription="@string/none"
            android:padding="5dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_food_delivery" />

        <TextView
            android:id="@+id/txtFoodName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@id/foodImageView"
            android:fontFamily="@font/lemon_reg"
            android:gravity="start"
            android:text="@string/sample_food"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/txtFoodPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtFoodName"
            android:layout_marginStart="15dp"
            android:layout_marginTop="45dp"
            android:layout_toEndOf="@id/foodImageView"
            android:drawablePadding="5dp"
            android:fontFamily="@font/lemon_reg"
            android:text="@string/sample_price"
            android:textColor="#ffc107"
            app:drawableStartCompat="@drawable/ic_rupee_indian" />

        <TextView
            android:id="@+id/favTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            app:drawableStartCompat="@drawable/ic_fav_outline" />

        <TextView
            android:id="@+id/txtFoodRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtFoodName"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="45dp"
            android:layout_marginEnd="15dp"
            android:fontFamily="@font/lemon_reg"
            android:text="@string/_4_5"
            android:textColor="@color/green" />


    </RelativeLayout>


</androidx.cardview.widget.CardView>
